	the tuple stream methods on GT.Net.Client, GT.Net.PingedNotification,
	GT.Net.DelayedBinaryStream, and GT.Net.AggregatedSharedDictionary.

      * The Sleep() implementations on GT.Net.Client and GT.Net.Server
	now return a boolean to indicate whether the sleep executed
	without interruption.  Future versions of GT may provide some
	method for event processing during Sleep().

      * There have been some major renames:

	  * Message.Id has been renamed Channel.  The use of 'id' was
	    somewhat ambiguous and causing confusion.  All uses of 'id' to
	    mean a channel id or a stream id have been redone to use channel. 
	    Described in <https://papyrus.usask.ca/trac/gt/ticket/74>.

	  * UniqueIdentity has been renamed to simply Identity.  Although
	    the identity value is unique between clients attached to
	    the same server, the values are not globally unique.  Clients
	    *do* have a 'Guid' property, however, which is communicated
	    to the server.
	      * IConnexion.UniqueIdentity -> Identity
	      * IStream.UniqueIdentity -> Identity
	      * GTCapabilities.CLIENT_ID -> CLIENT_GUID

  * As part of the renames, some non-API but possibly visible classes
    have also been renamed for clarity:

      * To better reflect their intentions:
          ClientConnexion -> ConnexionToClient
	  ServerConnexion -> ConnexionToServer
	    * 'server' field -> 'owner' to match ConnexionToClient

  * GT.Net.Client and GT.Net.Server have been reworked and had common
    code extracted to a common subclass, GT.Net.Communicator.

  * GT now uses the open-source Common.Logging package (v1.2.0) for
    logging messages.  Control-flow information is reported at the
    "Trace" level, and informational, warning, and errors are
    reported via the "Info", "Warn", and "Error" levels. 
    Common.Logging provides a simple abstraction to allow selecting
    a logging implementation at runtime (either programmatically